<resources>
    <string name="app_name">FunCamera</string>
    <string name="about">关于</string>
    <string name="drawer_item_home">主页</string>
    <string name="drawer_item_homeDesc">回到程序主页</string>
    <string name="drawer_item_setting">设置</string>
    <string name="drawer_item_aboutDesc">关于本程序</string>
    <string name="drawer_item_settingDesc">更改应用的全局设置</string>
    <string name="drawer_item_section_header">更多信息</string>
    <string name="drawer_item_open_source">开源项目</string>
    <string name="drawer_item_exit">退出</string>
    <string name="app_main_functions_title">程序主要功能介绍</string>
    <string name="app_version_info_title">程序版本号</string>
    <string name="app_main_functions">程序主要功能: 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null 1. null 2. null </string>
    <string name="app_version_info">version 1.0 alpha @肖文韬 2017 </string>
    <string name="welcome">欢迎</string>
    <string name="welcome_detail">本程序功能介绍 TODO</string>
    <string name="easy_to_use">简单易用</string>
    <string name="easy_to_use_detail">友好的交互界面, 遵循 Google Material Design 规范</string>
    <string name="ai_power">机器学习</string>
    <string name="ai_power_detail">TensorFlow AI 助力名画风格渲染和实时的物体识别</string>
    <string name="customizable">图片处理</string>
    <string name="customizable_detail">多大数十种名画效果和滤镜, 简单快速得把您拍出来的照片打造成顶级名画风格</string>
    <string name="title_activity_settings">Settings</string>
    <string name="camera_launch_title">通过人工智能把手机中那些普通的照片模仿出著名艺术家画作的风格</string>
    <string name="object_detect_launch_title">实时物体检测, Powered by Tensorflow</string>
    <string name="launch">启动</string>
    <string name="no_camera_permission">无法访问相机, 请检查您的权限.</string>
    <string name="change_camera_err">切换相机异常</string>
    <string name="flash_camera_err">打开或关闭闪光灯错误</string>
    <string name="not_support_camera_flash">您的相机不支持闪光灯</string>
    <string name="close_torch">关闭闪光灯</string>
    <string name="open_torch">开启闪光灯</string>
    <string name="sticker">贴纸</string>
    <string name="filter">滤镜</string>
    <string name="text_label">标签</string>
    <string name="open_photo_file_err">打开照片文件失败!</string>


    <!-- Tensorflow -->
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
